Primeros textos html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <h1>RETO 01 </h1>
+        <P>sdlfkjskldjf</P>
 </body>
 </html>
