--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>RETO 01 </h1>
-        <P>sdlfkjskldjf</P>
+    <div class="card">
+        <div class="image">
+
+        </div>
+        <div class="description">
+            <h2>PERFUME</h2>
+            <h1>Gabrielle Essence
+                Eau de Parfum</h1>
+            <p>A Floral, solar and voluptuous interpretation composed by Oliver Polge, Perfume Creator for the House of CHANEL</p>
+            <div class="price">
+                <div class="price_now">$149.99</div>
+                <div class="price before">$169.99</div>
+            </div>
+            <div class="button_add">
+                <span></span>
+                <p>Add to cart</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
